@@ -1,0 +1,3 @@
+#
+# amd64/FreeBSD configuration
+#
